[style] Fix horizontal scrolling on mobile

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -7,6 +7,9 @@ html {
 	height: 100%;
 	margin: 0;
 }
+html.app {
+	overflow-x: hidden;
+}
 
 body {
 	margin: 0px;
